# maya.ia

./: .gitignore  README.md  playground_maya.py  pyproject.toml
agents/: __init__.py  doctor_agent.py  maya_coordinator.py  patient_agent.py
api/: main.py
api/routes/: __init__.py  appointments.py  health.py  payments.py  webhooks.py
data/: maya_cannabis_qa_300.json  maya_cannabis_use_cases_100.json  maya_qa_300.json
db/: supabase_schema.sql
prompts/: doctor.md  patient.md  style_guide.md  system_maya.md
services/: supabase_client.py
tools/: __init__.py  calendar_tools.py  docs_tools.py  supabase_tools.py
tools/messaging/: __init__.py  evolution_whatsapp.py
tools/payments/: __init__.py  asaas.py  pagarme.py
